@@ -52,6 +52,7 @@ xine-ui (0.99.6) unstable; urgency=low
   *   proper free after strsep()
   *   opening multiple times TV settings window
   * Fixed string encoding conversion, closes xine bug #14.
+  * Fixed loading of playlist containing relative paths, closes xine bug #52.
 
 xine-ui (0.99.5) unstable; urgency=low
 
